* Tablas activan un "scrollbar" dinámico cuando su contenido excede ciertos límites fixes #54

--- a/tweetfilter/static/css/style.css
+++ b/tweetfilter/static/css/style.css
@@ -50,3 +50,7 @@
 .td_right_padding{
     padding-right: 8px;
 }
+
+.scrollable {
+    max-height: 300px;
+}
